--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
+    <div class="holder">
         <div class="items1">1</div>
         <div class="items2">2</div>
         <div class="items3">3</div>
